--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "homepage": "https://vitalik211287.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "toastify": "^2.0.1",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
